2008-08-26  Brian Gough  <bjg@network-theory.co.uk>

	* ellint.c (gsl_sf_ellint_Kcomp_e): corrected taylor expansion for
	k close to 1.

2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>

	* Makefile.am (INCLUDES): use top_srcdir instead of top_builddir

2008-06-27  Brian Gough  <bjg@network-theory.co.uk>

	* legendre_poly.c (gsl_sf_legendre_array_size): removed inline
	version of this function in gsl_sf_legendre.h

2008-03-17  Brian Gough  <bjg@network-theory.co.uk>

	* hyperg_2F1.c (gsl_sf_hyperg_2F1_e): replace duplicate error
	check on stat3 by stat4

2008-03-15  Brian Gough  <bjg@network-theory.co.uk>

	* bessel.c (gsl_sf_bessel_Jnu_asympx_e): use full asymptotic
	series

2008-03-14  Brian Gough  <bjg@network-theory.co.uk>

	* bessel_j.c (gsl_sf_bessel_jl_e): increase error estimate by
	factor of 2

2008-02-09  Brian Gough  <bjg@network-theory.co.uk>

	* exp.c (gsl_sf_exp_e10_e): only use exponent e10 when standard
	exp() is out of range
	(gsl_sf_exp_mult_e10_e): add full set of error terms

2008-01-10  Brian Gough  <bjg@network-theory.co.uk>

	* hyperg_2F1.c (gsl_sf_hyperg_2F1_e): handle case of x==1

2007-10-25  Brian Gough  <bjg@network-theory.co.uk>

	* bessel.c (gsl_sf_bessel_J_CF1): handle underflow by rescaling in
	recurrence

2007-09-13  Brian Gough  <bjg@network-theory.co.uk>

	* ellint.c (gsl_sf_ellint_Pcomp_e): remove test for n <1, no
	restriction needed

2007-09-10  Brian Gough  <bjg@network-theory.co.uk>

	* expint.c (gsl_sf_expint_En_e): added for support En(x)
	(gsl_sf_expint_En_scaled_e): added for support En(x) scaled

	* gamma_inc.c (gamma_inc_CF): include finite precision of log term

2007-08-30  Brian Gough  <bjg@network-theory.co.uk>

	* psi.c (psi_complex_rhp): accumulate error, to allow for
	cancellation effects

	* beta.c (gsl_sf_lnbeta_sgn_e): added missing factor of 2 for
	error.

2007-08-27  Brian Gough  <bjg@network-theory.co.uk>

	* beta_inc.c (gsl_sf_beta_inc_e): handle cases where a<=0 or b<=0
